syntax = "proto3";

import "google/protobuf/timestamp.proto";

package authPackage;

service AuthService {
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}
